changed hero image

--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    I was 29 years old and my family got busy looking for an appropriate match for me. After going through several rishta meetings for a year I had had enough. I thought i would never meet my perfect match. 
-But then one day Ashwita's brother-in-law approached me through some common friend, who suggested about me to him. And immediately after photos and biodatas were exchanged we contacted each other and got along like house on fire!!! We were so compatible, it felt too good to be true!!!
-Soon we met with families over lunch. The look we exchanged, so beautiful, so naive, so innocent!!! That one look and i knew we are meant to be!! And the rest is history :)
+                        It was a Serendipity!! </p>
 
+                      <p>  When my family got busy looking for an appropriate match for me. And after going through several rishta meetings for a year I had had enough. I thought i would never meet my perfect match. But then out of nowhere one day Ashwita's brother-in-law approached me through some common friend, who suggested about me to him. And immediately photos and biodatas were exchanged. As we got to know each other, we got along like house on fire!!! We were so compatible, it felt too good to be true!!! </p>
+                        
+                      <p>  Soon we met with families over lunch. The look we exchanged, so beautiful, so naive, so innocent!!! That one look and i knew we are meant to be!! And the rest is history :)
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -211,7 +212,7 @@ Soon we met with families over lunch. The look we exchanged, so beautiful, so 
             <div class="col-md-12 text-center">
                 <h3>A picture is worth a thousand words!</h3>
                 <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
+                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#ASukiGetsHitched</a>
                 </p>
             </div>
         </div>
