made few changes in met section

--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                        It was a Serendipity!! </p>
-
-                      <p>  When my family got busy looking for an appropriate match for me. And after going through several rishta meetings for a year I had had enough. I thought i would never meet my perfect match. But then out of nowhere one day Ashwita's brother-in-law approached me through some common friend, who suggested about me to him. And immediately photos and biodatas were exchanged. As we got to know each other, we got along like house on fire!!! We were so compatible, it felt too good to be true!!! </p>
+                        It was a Serendipity!!<br/>
+                        When my family got busy looking for an appropriate match for me. And after going through several rishta meetings for a year I had had enough. I thought i would never meet my perfect match. But then out of nowhere one day Ashwita's brother-in-law approached me through some common friend, who suggested about me to him. And immediately photos and biodatas were exchanged. As we got to know each other, we got along like house on fire!!! We were so compatible, it felt too good to be true!!! <br/>
                         
                       <p>  Soon we met with families over lunch. The look we exchanged, so beautiful, so naive, so innocent!!! That one look and i knew we are meant to be!! And the rest is history :)
                 </p>
