--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>We are getting hitched</h3>
+                <h3>You are invited to celebrate the marriage of <br/> Ashwita and Sukesh</h3>
                 <p>The dates are 29<sup>th</sup>, 1<sup>st</sup> & 2<sup>nd</sup> December '19 and we would like you to be a part of it.</p>
+                <div class="share-bar"></div>
             </div>
         </div>
     </div>
