--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>You are invited to celebrate the marriage of <br/> Ashwita and Sukesh</h3>
+                <h3>WE ARE GETTING HITCHED</h3>
                 <p>The dates are 29<sup>th</sup>, 1<sup>st</sup> & 2<sup>nd</sup> December '19 and we would like you to be a part of it.</p>
                 <div class="share-bar"></div>
             </div>
@@ -95,14 +95,14 @@
 </section>
 
 <section id="intro">
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3 class="header">How we met</h3>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
+        <div class="row text-center">
+            <div class="col-md-6 col-md-offset-3">
                 <p>
                         It was a Serendipity!!<br/>
                         When my family got busy looking for an appropriate match for me. And after going through several rishta meetings for a year I had had enough. I thought i would never meet my perfect match. But then out of nowhere one day Ashwita's brother-in-law approached me through some common friend, who suggested about me to him. And immediately photos and biodatas were exchanged. As we got to know each other, we got along like house on fire!!! We were so compatible, it felt too good to be true!!! <br/>
