--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Sukesh & Ashwita getting hitched!</title>
+    <title>Sukesh & Ashwita are getting hitched!</title>
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Sukesh & Ashwita getting hitched">
+    <meta property="og:title" content="Sukesh & Ashwita are getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
+    <meta property="og:image" content="https://ashwitaweds.suke.sh/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -98,12 +98,22 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">How we met</h3>
+                <h3 class="header">HOW WE MET</h3>
             </div>
         </div>
         <div class="row">
                 <div class="col-md-12">
-                <p>It was a Serendipity!!<br/>When my family got busy looking for an appropriate match for me. And after going through several rishta meetings for a year I had enough. I thought I would never meet my perfect match. But then out of nowhere one day Ashwita's brother-in-law approached me through some common friend, who suggested about me to him. And immediately photos and biodatas were exchanged. As we got to know each other, we got along like house on fire!!! We were so compatible, it felt too good to be true!!! <br/>Soon we met with families over lunch. The look we exchanged, so beautiful, so naive, so innocent!!! That one look and i knew we are meant to be!! And the rest is history :)</p>
+                <p>Let me tell you a small story…<br/>
+                Once upon a time… isn’t it how it always begin?<br/>
+Once upon a time, there was a Prince, who was told by his parents that it was time for him to get married. After searching high and low for a year, he had given up hope on finding his one true love. It never felt right, never ‘clicked’ with anyone.<br/>
+One day, he received a proposal for a Princess from a faraway land. The Prince and the Princess were introduced to each other and found each other to be so compatible, that it felt too good to be true!!<br/>
+Soon the parents decided to meet and confer the union. The Prince and the Princess met for the first time and it was SERENDIPITY!<br/>
+The look they exchanged, so beautiful, so naive, so innocent!!! That one look and he knew they were meant to be!<br/>
+♥ And then they decided to get married ♥<br/>
+
+
+
+                </p>
                 </p>
             </div>
         </div>
@@ -114,34 +124,37 @@
 <section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h3 class="header">Events</h3>
+            <div class="col-md-12 text-center">
+                <h3 class="header">Save the dates and join us in our celebration!!!</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>29th November</strong></p>
-
-                    <h5>Mehndi </h5>
-                            <h6>Sukesh's place - <span class="time">10 am - 3pm</span> <br/> Ashwita's place -  <span class="time">7 pm onwards</span> </h6>
-                    <p> It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom attend the event and a professional mehndi artist applies mehndi to the bride's hands and feet. This will be having a celebratory festival feel to it with people wearing vibrant clothes and dancing, singing and a lot more.
-                        </p>
+                    <h5>
+                        <strong>29 November ♥  MEHNDI Ceremony </strong>
+                    </h5>
+                    <h6>
+                        Sukesh’s 🏠 -  <span class="time"> 10 am to 3 pm</span>
+                    </h6>
+                    <h6>
+                    Ashwita’s 🏠 - <span class="time"> 7 pm onwards</span> 
+                </h6>
+                    <p> Marriage adds celebrations to life. Music adds life to celebrations. Mehndi adorns the hands as life takes on a new color. We would like to invite you to share in our joy as we celebrate our upcoming wedding.</p>
                 </div>
                 <div class="wp5">
-                        <p><strong>1st December</strong></p>
-                        
-                    <h5>WEDDING <span class="time">Muhurta 12.01pm</span></h5>
-                    <p>This is the main event in the entire wedding when the bride and the groom tie the knot. The groom comes with the barat and is greeted by the bride side with some dhol of course as maximum number of guests would be attending this event. This is when the couple circle the sacred fire and are finally declared husband and wife.</p>
+                        <h5><strong>1 December ♥ WEDDING Ceremony</strong></h5> 
+                    <h6>Muhurtam - <span class="time"> 12.01 pm </span></h6>
+                    <p>With new Dreams, new Hopes, and new Aspirations we are stepping into a new beginning of Married Life. Please join us as we tie the knot and head towards Love, Laughter and happily ever after!</p>
 
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <p><strong>2nd December</strong></p>
+                    <h5><strong>2 December ♥ RECEPTION</strong></h5>
 
-                    <h5>Reception <span class="time">11am-2pm</span></h5>
-                    <p>This event is no way close to ethnic. The bride & groom would like to have some fun. With all celebrations around. The Groom's and Bride's family will come together to celebrate their union and cheers to new beginnings!! </p>
+                    <h6><span class="time">11am-2pm</span></h6>
+                    <p>It is an After THE Wedding celebration! We invite you to rejoice with us as the ride of our lives begin…</p>
                 </div>
                 
             </div>
