--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>WE ARE GETTING HITCHED</h3>
-                <p>The dates are 29<sup>th</sup>, 1<sup>st</sup> & 2<sup>nd</sup> December '19 and we would like you to be a part of it.</p>
+                <h3>So the adventure begins!<br/>
+                We are finally getting hitched on 1<sup>st</sup> December, 2019!!!.</h3>
                 <div class="share-bar"></div>
             </div>
         </div>
