--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>So the adventure begins!<br/>
-                We are finally getting hitched on 1<sup>st</sup> December, 2019!!!.</h3>
+                We are finally getting hitched on 1<sup>st</sup> December, 2019!!!</h3>
                 <div class="share-bar"></div>
             </div>
         </div>
