changed met text

--- a/index.html
+++ b/index.html
@@ -103,17 +103,15 @@
         </div>
         <div class="row">
                 <div class="col-md-12">
-                <p>Let me tell you a small story…<br/>
-                Once upon a time… isn’t it how it always begin?<br/>
-Once upon a time, there was a Prince, who was told by his parents that it was time for him to get married. After searching high and low for a year, he had given up hope on finding his one true love. It never felt right, never ‘clicked’ with anyone.<br/>
-One day, he received a proposal for a Princess from a faraway land. The Prince and the Princess were introduced to each other and found each other to be so compatible, that it felt too good to be true!!<br/>
-Soon the parents decided to meet and confer the union. The Prince and the Princess met for the first time and it was SERENDIPITY!<br/>
-The look they exchanged, so beautiful, so naive, so innocent!!! That one look and he knew they were meant to be!<br/>
-♥ And then they decided to get married ♥<br/>
+    
 
-
-
-                </p>
+<p>Let me share a small story...<br/>
+Once upon a time… isn’t it how it always begin?<br/>
+Once upon a time, there was a Prince, who was told by his parents that it was time for him to get married. After searching high and low for a year, he had given up hope on finding his one true love. It never felt right, nor did it ever 'click' with anyone.<br/>
+One day, he received a proposal for a Princess from a faraway land. The Prince and the Princess were introduced to each other. They exchanged few letters to get to know each other. They found each other to be so compatible, that it felt too good to be true!!<br/>
+Soon the parents decided to meet and confer the union. When the Prince and the Princess met for the first time, it was SERENDIPITY!<br/>
+The look they exchanged was so beautiful, so naive, so innocent!!! That one look and he knew they were meant to be!<br/>
+♥ And then they decided to be together forever...♥
                 </p>
             </div>
         </div>
