--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>So the adventure begins!<br/>
-                We are finally getting hitched on 1<sup>st</sup> December, 2019!!!</h3>
+                    <h3>
+                    SO THE ADVENTURE BEGINS!!<br/>
+                    💞 <br/>
+                    We are finally getting HITCHED on 1st December, 2019!!!
+                    </h3>
                 <div class="share-bar"></div>
             </div>
         </div>
@@ -104,16 +107,14 @@
         <div class="row">
                 <div class="col-md-12">
     
-
 <p>Let me share a small story...<br/>
 Once upon a time… isn’t it how it always begin?<br/>
 Once upon a time, there was a Prince, who was told by his parents that it was time for him to get married. After searching high and low for a year, he had given up hope on finding his one true love. It never felt right, nor did it ever 'click' with anyone.<br/>
 One day, he received a proposal for a Princess from a faraway land. The Prince and the Princess were introduced to each other. They exchanged few letters to get to know each other. They found each other to be so compatible, that it felt too good to be true!!<br/>
 Soon the parents decided to meet and confer the union. When the Prince and the Princess met for the first time, it was SERENDIPITY!<br/>
 The look they exchanged was so beautiful, so naive, so innocent!!! That one look and he knew they were meant to be!<br/>
-♥ And then they decided to be together forever...♥
-                </p>
-            </div>
+♥ And then they decided to be together forever...♥<br/>
+</p></div>
         </div>
        
     </div>
