--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                    <h3>
-                    SO THE ADVENTURE BEGINS💞</h3>
+                    <h3>💞SO THE ADVENTURE BEGINS💞</h3>
                    
                 <h4>
                 <div class="flex-col-c-sb size1 overlay1 p-l-75 p-r-75 p-t-20 p-b-40 p-lr-15-sm">
@@ -209,7 +208,7 @@ The look they exchanged was so beautiful, so naive, so innocent!!! That one look
                     <h3 class="text-center section-padding">Ugh... dress codes?</h3>
                     <h5>Mehndi  </h5>
                     <p>
-                        <strong>Western attire</strong>
+                        <strong>Western or Contemporary</strong>
                         <br>
                         A fun & vibrant look that is contemporary & fashionable which is not too prim & proper is the best to pull off without any extra efforts.
                     </p>
